--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -74,9 +74,5 @@ reviews:
   ]
 
   auto_review:
-    enabled: true
-    auto_incremental_review: true
-    drafts: true
-    labels: [
-      "ai-code-review",
-    ]
+    labels:
+      - "ai-code-review"
