Disable "finishing touches" and "pre-merge checks" in the walkthrough
Signed-off-by: Nelo-T. Wallus <red.brush9525@fastmail.com>
Signed-off-by: Nelo-T. Wallus <n.wallus@sap.com>

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -62,6 +62,20 @@ reviews:
   suggested_reviewers: false
   poem: false
   in_progress_fortune: false
+  finishing_touches:
+    docstrings:
+      enabled: False
+    unit_tests:
+      enabled: False
+  pre_merge_checks:
+    docstrings:
+      mode: off
+    title:
+      mode: off
+    description:
+      mode: off
+    issue_assessment:
+      mode: off
 
   path_filters: [
     # kubebuilder generated files
